mail received + allure genration success